Cropped photos, minor edit to footer.

--- a/includes/foot.html
+++ b/includes/foot.html
@@ -1,3 +1,3 @@
 <footer>
-  Copyright 2014 Christian Gunning  | <a href="http://fotogrph.com">Images</a> | website template by <a href="http://www.freehtml5templates.co.uk">Free HTML5 Templates</a>
+  Copyright 2014 Christian Gunning  | Images by <a href="http://fotogrph.com">fotogrph.com</a> | website template by <a href="http://www.freehtml5templates.co.uk">Free HTML5 Templates</a>
 </footer>
