--- a/includes/sidebar.html
+++ b/includes/sidebar.html
@@ -1,12 +1,12 @@
   <div class="sidebar_container">       
     <div class="sidebar">
       <div class="sidebar_item">
-        <h4>
-            Christian Gunning, Ph.D.
-            <a href="http://www.math.unm.edu/~hwearing/researchgroup/index.html">Wearing Research Group</a>
-            <a href="http://biology.unm.edu/">Department of Biology</a>
-            <a href="http://www.unm.edu/">University of New Mexico</a>
-        </h4>
+        <ul>
+            <li>Christian Gunning, Ph.D.
+            <li><a href="http://www.math.unm.edu/~hwearing/researchgroup/index.html">Wearing Research Group</a>
+            <li><a href="http://biology.unm.edu/">Department of Biology</a>
+            <li><a href="http://www.unm.edu/">University of New Mexico</a>
+        </ul>
       </div><!--close sidebar_item--> 
     </div><!--close sidebar-->     		
     <div class="sidebar">
