--- a/includes/nav.html
+++ b/includes/nav.html
@@ -6,7 +6,7 @@
       <li id="research"><a href="research.html">Research</a></li>
       <li id="teach"><a href="teaching.html">Teaching</a></li>
       <li id="pubs"><a href="pubs.html">Publications</a></li>
-      <li id="cv"><a href="files/cv.pdf">C.V.</a></li>
+      <li id="cv"><a href="cv/cv.pdf">C.V.</a></li>
       <li id="personal"><a href="http://blog.x14n.org">Personal</a></li>
     </ul>
   </div><!--close menubar-->	
