Minor updates to sidebar

--- a/includes/sidebar.html
+++ b/includes/sidebar.html
@@ -12,10 +12,10 @@
     <div class="sidebar">
       <div class="sidebar_item">
         <h2>News and Events</h2>
+        <h3>June 2014</h3>
+        <p>Conference: <a href="http://www.eeidconference.org/2014/">Ecology and Evolution of Infectious Diseases</a> in Fort Collins, CO.
         <h3>May 2014</h3>
-        <p>Ecology and Evolution of Infectious Diseases in Fort Collins, CO.
-        <h3>May 2014</h3>
-        <p>Ph.D. Defense
+        <p>Ph.D. Defense: Passed with Distinction
       </div><!--close sidebar_item--> 
     </div><!--close sidebar-->
     <div class="sidebar">
