Minor edits, adding links, formatting

--- a/includes/nav.html
+++ b/includes/nav.html
@@ -6,7 +6,7 @@
       <li id="teach"><a href="teaching.html">Teaching</a></li>
       <li id="pubs"><a href="pubs.html">Publication</a></li>
       <li id="cv"><a href="cv/cv.pdf">C.V.</a></li>
-      <li id="personal"><a href="http://blog.x14n.org">P</a></li>
+      <li id="personal"><a href="http://blog.x14n.org">Blog</a></li>
     </ul>
   </div><!--close menubar-->	
 </nav>	
