Minor updates - news, a typo.

--- a/includes/sidebar.html
+++ b/includes/sidebar.html
@@ -3,15 +3,18 @@
       <div class="sidebar_item">
         <ul>
             <li>Christian Gunning, Ph.D.
-            <li><a href="http://www.math.unm.edu/~hwearing/researchgroup/index.html">Wearing Research Group</a>
-            <li><a href="http://biology.unm.edu/">Department of Biology</a>
-            <li><a href="http://www.unm.edu/">University of New Mexico</a>
+            <li><a href="http://www.cals.ncsu.edu/entomology/">Department of Entomology</a>
+            <li><a href="http://www.ncsu.edu/">North Carolina State University</a>
         </ul>
       </div><!--close sidebar_item--> 
     </div><!--close sidebar-->     		
     <div class="sidebar">
       <div class="sidebar_item">
         <h2>News and Events</h2>
+        <h3>Nov 2014</h3>
+        <p>Conference: <a href="http://www.astmh.org/Home.htm">Trop Med</a> in New Orleans, LA.
+        <h3>Oct 2014</h3>
+        <p>Started post-doc with <a href="http://www.cals.ncsu.edu/entomology/Gould">Fred Gould</a> and <a href="http://alun.math.ncsu.edu/">Alun Lloyd</a> at <a href="http://www.ncsu.edu">NCSU</a>.
         <h3>June 2014</h3>
         <p>Conference: <a href="http://www.eeidconference.org/2014/">Ecology and Evolution of Infectious Diseases</a> in Fort Collins, CO.
         <h3>May 2014</h3>
