--- a/includes/sidebar.html
+++ b/includes/sidebar.html
@@ -5,20 +5,20 @@
             <li>Christian Gunning, Ph.D.
             <li><a href="http://www.cals.ncsu.edu/entomology/">Department of Entomology</a>
             <li><a href="http://www.ncsu.edu/">North Carolina State University</a>
+            <li>Currently located in Missoula, MT
         </ul>
       </div><!--close sidebar_item--> 
     </div><!--close sidebar-->     		
     <div class="sidebar">
       <div class="sidebar_item">
         <h2>News and Events</h2>
+        <h3>Sep 2015</h3>
+        <p>Travel to Iquitos, Peru to collaborate with <a href="http://entomology.ucdavis.edu/Faculty/Thomas_W_Scott/Personnel/Amy_Morrison/">Amy Morrison</a>.
+        <p>Conference: <a href="http://www.sove.org/SOVE%20folder/Conference.html">Society of Vector Ecology</a> in Albuquerque, NM.</a>
         <h3>Nov 2014</h3>
         <p>Conference: <a href="http://www.astmh.org/Home.htm">Trop Med</a> in New Orleans, LA.
         <h3>Oct 2014</h3>
         <p>Started post-doc with <a href="http://www.cals.ncsu.edu/entomology/Gould">Fred Gould</a> and <a href="http://alun.math.ncsu.edu/">Alun Lloyd</a> at <a href="http://www.ncsu.edu">NCSU</a>.
-        <h3>June 2014</h3>
-        <p>Conference: <a href="http://www.eeidconference.org/2014/">Ecology and Evolution of Infectious Diseases</a> in Fort Collins, CO.
-        <h3>May 2014</h3>
-        <p>Ph.D. Defense: Passed with Distinction
       </div><!--close sidebar_item--> 
     </div><!--close sidebar-->
     <div class="sidebar">
@@ -26,7 +26,7 @@
     <div class="sidebar">
       <div class="sidebar_item">
         <h2>Contact</h2>
-        <p>Email: <a href="mailto:icos dot atropa at gmail dot com"></a>icos dot atropa at gmail dot com</p>
+        <p>Email: <a href="mailto:net at x14n dot org"></a>net at x14n dot org</p>
       </div><!--close sidebar_item--> 
     </div><!--close sidebar-->
    </div><!--close sidebar_container-->	
