--- a/includes/nav.html
+++ b/includes/nav.html
@@ -1,12 +1,12 @@
 <nav>
   <div id="menubar">
     <ul id="nav">
-      <li id="index"><a href="index.html">Christian Gunning, Ph.D.</a></li>
+      <li id="index"><a href="index.html">Home</a></li>
       <li id="research"><a href="research.html">Research</a></li>
       <li id="teach"><a href="teaching.html">Teaching</a></li>
       <li id="pubs"><a href="pubs.html">Publication</a></li>
       <li id="cv"><a href="cv/cv.pdf">C.V.</a></li>
-      <li id="personal"><a href="http://blog.x14n.org">Blog</a></li>
+      <li id="links"><a href="links.html">Links</a></li>
     </ul>
   </div><!--close menubar-->	
 </nav>	
