--- a/includes/nav.html
+++ b/includes/nav.html
@@ -4,7 +4,7 @@
       <li id="index"><a href="index.html">Home</a></li>
       <li id="research"><a href="research.html">Research</a></li>
       <li id="teach"><a href="teaching.html">Teaching</a></li>
-      <li id="pubs"><a href="pubs.html">Publication</a></li>
+      <li id="pubs"><a href="pubs.html">Publications</a></li>
       <li id="cv"><a href="cv/cv.pdf">C.V.</a></li>
       <li id="links"><a href="links.html">Links</a></li>
     </ul>
