can't use symlink?

--- a/includes/nav.html
+++ b/includes/nav.html
@@ -5,7 +5,7 @@
       <li id="research"><a href="research.html">Research</a></li>
       <li id="teach"><a href="teaching.html">Teaching</a></li>
       <li id="pubs"><a href="pubs.html">Publications</a></li>
-      <li id="cv"><a href="cv/Gunning_2016.pdf">C.V.</a></li>
+      <li id="cv"><a href="cv/Gunning_CV.pdf">C.V.</a></li>
       <li id="links"><a href="links.html">Links</a></li>
     </ul>
   </div><!--close menubar-->	
