--- a/includes/nav.html
+++ b/includes/nav.html
@@ -4,11 +4,11 @@
       <li id="index"><a href="index.html">Home</a></li>
       <li id="research"><a href="research.html">Research</a></li>
       <li id="teach"><a href="teaching.html">Teaching</a></li>
-      <li id="pubs"><a href="pubs.html">Publications</a></li>
+      <li id="pubs"><a href="http://scholar.google.com/citations?user=y355pzMAAAAJ">Publications</a></li>
       <li id="cv"><a href="cv/Gunning_CV.pdf">C.V.</a></li>
       <li id="links"><a href="links.html">Links</a></li>
     </ul>
   </div><!--close menubar-->	
-</nav>	
+</nav>
  
 <!-- ?? add <li class="current"><a href="ourwork.html">Our Work</a></li> -->
