--- a/includes/sidebar.html
+++ b/includes/sidebar.html
@@ -3,22 +3,18 @@
       <div class="sidebar_item">
         <ul>
             <li>Christian Gunning, Ph.D.
-            <li><a href="http://www.cals.ncsu.edu/entomology/">Department of Entomology</a>
-            <li><a href="http://www.ncsu.edu/">North Carolina State University</a>
-            <li>Currently located in Missoula, MT
+            <li><a href="www.kenyon.edu/">Kenyon College</a>
         </ul>
       </div><!--close sidebar_item--> 
     </div><!--close sidebar-->     		
     <div class="sidebar">
       <div class="sidebar_item">
         <h2>News and Events</h2>
+        <h3>Aug 2017</h3>
+        <p> Begin teaching at Kenyon!
         <h3>Sep 2015</h3>
         <p>Travel to Iquitos, Peru to collaborate with <a href="http://entomology.ucdavis.edu/Faculty/Thomas_W_Scott/Personnel/Amy_Morrison/">Amy Morrison</a>.
         <p>Conference: <a href="http://www.sove.org/SOVE%20folder/Conference.html">Society of Vector Ecology</a> in Albuquerque, NM.</a>
-        <h3>Nov 2014</h3>
-        <p>Conference: <a href="http://www.astmh.org/Home.htm">Trop Med</a> in New Orleans, LA.
-        <h3>Oct 2014</h3>
-        <p>Started post-doc with <a href="http://www.cals.ncsu.edu/entomology/Gould">Fred Gould</a> and <a href="http://alun.math.ncsu.edu/">Alun Lloyd</a> at <a href="http://www.ncsu.edu">NCSU</a>.
       </div><!--close sidebar_item--> 
     </div><!--close sidebar-->
     <div class="sidebar">
