--- a/includes/sidebar.html
+++ b/includes/sidebar.html
@@ -2,8 +2,8 @@
     <div class="sidebar">
       <div class="sidebar_item">
         <ul>
-            <li>Christian Gunning, Ph.D.
-            <li><a href="www.kenyon.edu/">Kenyon College</a>
+            <li>Christian E. Gunning, Ph.D.
+            <li><a href="http://www.kenyon.edu/">Kenyon College</a>
         </ul>
       </div><!--close sidebar_item--> 
     </div><!--close sidebar-->     		
@@ -22,7 +22,7 @@
     <div class="sidebar">
       <div class="sidebar_item">
         <h2>Contact</h2>
-        <p>Email: <a href="mailto:net at x14n dot org"></a>net at x14n dot org</p>
+        <p>Email: <a href="mailto:research at x14n dot org"></a>net at x14n dot org</p>
       </div><!--close sidebar_item--> 
     </div><!--close sidebar-->
    </div><!--close sidebar_container-->	
