--- a/includes/sidebar.html
+++ b/includes/sidebar.html
@@ -2,7 +2,7 @@
     <div class="sidebar">
       <div class="sidebar_item">
         <ul>
-            <li>Christian E. Gunning, Ph.D.
+            <li>Christian E. Gunning, PhD
             <li><a href="http://www.kenyon.edu/">Kenyon College</a>
         </ul>
       </div><!--close sidebar_item--> 
@@ -10,6 +10,8 @@
     <div class="sidebar">
       <div class="sidebar_item">
         <h2>News and Events</h2>
+        <h3>Aug 2017</h3>
+        New paper: <a href="http://rspb.royalsocietypublishing.org/content/284/1861/20171268"<em>Evidence of cryptic incidence in childhood diseases"</em></a>.
         <h3>Aug 2017</h3>
         <p> Begin teaching at Kenyon!
         <h3>Sep 2015</h3>
