Cleanup news, paper with michael

--- a/includes/sidebar.html
+++ b/includes/sidebar.html
@@ -10,13 +10,12 @@
     <div class="sidebar">
       <div class="sidebar_item">
         <h2>News and Events</h2>
+        <h3>Sep 2017</h3>
+        New paper: <a href="https://www.nature.com/articles/s41598-017-10633-2"<em>Evaluating strategies for reversing CRISPR-Cas9 gene drives</em></a>.
         <h3>Aug 2017</h3>
         New paper: <a href="http://rspb.royalsocietypublishing.org/content/284/1861/20171268"<em>Evidence of cryptic incidence in childhood diseases"</em></a>.
         <h3>Aug 2017</h3>
-        <p> Begin teaching at Kenyon!
-        <h3>Sep 2015</h3>
-        <p>Travel to Iquitos, Peru to collaborate with <a href="http://entomology.ucdavis.edu/Faculty/Thomas_W_Scott/Personnel/Amy_Morrison/">Amy Morrison</a>.
-        <p>Conference: <a href="http://www.sove.org/SOVE%20folder/Conference.html">Society of Vector Ecology</a> in Albuquerque, NM.</a>
+        <p> Teaching at Kenyon!
       </div><!--close sidebar_item--> 
     </div><!--close sidebar-->
     <div class="sidebar">
