--- a/includes/sidebar.html
+++ b/includes/sidebar.html
@@ -10,12 +10,10 @@
     <div class="sidebar">
       <div class="sidebar_item">
         <h2>News and Events</h2>
-        <h3>Sep 2017</h3>
-        New paper: <a href="https://www.nature.com/articles/s41598-017-10633-2"<em>Evaluating strategies for reversing CRISPR-Cas9 gene drives</em></a>.
-        <h3>Aug 2017</h3>
-        New paper: <a href="http://rspb.royalsocietypublishing.org/content/284/1861/20171268"<em>Evidence of cryptic incidence in childhood diseases"</em></a>.
-        <h3>Aug 2017</h3>
-        <p> Teaching at Kenyon!
+        <h3>Feb 2019</h3>
+        <p> Started post-doc at UGA with the <a href="http://rohanilab.ecology.uga.edu/" Rohani Lab</a>.
+        <h3>Apr 2018</h3>
+        New paper: <a href="https://journals.plos.org/plosntds/article?rev=2&id=10.1371/journal.pntd.0006378"<em>Efficacy of Aedes aegypti control by indoor Ultra Low Volume (ULV) insecticide spraying in Iquitos, Peru</em></a>
       </div><!--close sidebar_item--> 
     </div><!--close sidebar-->
     <div class="sidebar">
