Index rewrite: short. Sidebar typo.

--- a/includes/sidebar.html
+++ b/includes/sidebar.html
@@ -11,7 +11,7 @@
       <div class="sidebar_item">
         <h2>News and Events</h2>
         <h3>Feb 2019</h3>
-        <p> Started post-doc at UGA with the <a href="http://rohanilab.ecology.uga.edu/" Rohani Lab</a>.
+        <p> Started post-doc with the <a href="http://rohanilab.ecology.uga.edu/">Rohani Lab</a> at UGA.
         <h3>Apr 2018</h3>
         New paper: <a href="https://journals.plos.org/plosntds/article?rev=2&id=10.1371/journal.pntd.0006378"<em>Efficacy of Aedes aegypti control by indoor Ultra Low Volume (ULV) insecticide spraying in Iquitos, Peru</em></a>
       </div><!--close sidebar_item--> 
